<resources>
    <string name="app_name">EduConnect app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="Timetable">
        <item> Monday </item>
        <item> Tuesday </item>
        <item> Wednesday </item>
        <item> Thursday </item>
        <item> Friday </item>
    </string-array>

    <string-array name="Description">
        <item>Description 1</item>
        <item>Description 2</item>
        <item>Description 3</item>
        <item>Description 4</item>
        <item>Description 5</item>

    </string-array>

    <string-array name="Monday">
        <item>Mixed Signal Design</item>
        <item>Analog Wave Propagation</item>
        <item>Break</item>
        <item>CT2 Lab - A1\nMSD Lab - A2</item>
        <item>Break</item>
        <item>Cluster Elective</item>
        <item>Cluster Elective Lab/Tut</item>
    </string-array>

    <string-array name="Tuesday">
        <item>Computer Communication Networks</item>
        <item>Communication Theory - 2</item>
        <item>Break</item>
        <item>Computer Communication Networks</item>
        <item>Mixed Signal Design</item>
        <item>Break</item>
        <item> CT2 Lab - A4\nMSD Lab - A1</item>
    </string-array>

    <string-array name="Wednesday">
        <item>Antenna and Wave Propagation</item>
        <item>Computer Communication Networks</item>
        <item>Break</item>
        <item>Cluster Elective</item>
        <item>Department Elective</item>
        <item>Break</item>
        <item> AWP Tutorial</item>
    </string-array>

    <string-array name="Thursday">
        <item>Antenna and Wave Propagation </item>
        <item>Communication Theory - 2</item>
        <item>Break</item>
        <item>Cluster Elective</item>
        <item>Department Elective</item>
        <item>Break</item>
        <item> CT2 Lab - A2\nMSD Lab - A3</item>
    </string-array>

    <string-array name="Friday">
        <item> CT2 Lab - A3\nMSD Lab - A4</item>
        <item>Break</item>
        <item>Mixed Signal Design</item>
        <item>Communication Theory - 2</item>
        <item>Break</item>
        <item>Department Elective Tut</item>
    </string-array>


    <string-array name="time1">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 2:55PM</item>
        <item>2:55PM - 4:45PM</item>
    </string-array>

    <string-array name="time2">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>

    <string-array name="time3">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>

    <string-array name="time4">
        <item>8:55AM - 9:50AM</item>
        <item>9:50AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>

    <string-array name="time5">
        <item>8:55AM - 10:45AM</item>
        <item>10:45AM - 11:15AM</item>
        <item>11:15AM - 12:10PM</item>
        <item>12:10PM - 1:05PM</item>
        <item>1:05PM - 2:00PM</item>
        <item>2:00PM - 3:50PM</item>
    </string-array>



    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="quickly_personalize_your_timetable_generate_notes_online_and_communicate_easily">Quickly personalize your timetable, generate notes online and communicate easily!</string>
    <string name="welcome_to_educonnect_timetable_app">Welcome to Educonnect timetable app</string>
    <string name="create_new_account">Create new account</string>
    <string name="textview">TextView</string>
    <string name="image_btn1" />
    <string name="image_btn2" />
    <string name="image_btn3" />
    <string name="image_btn4" />
    <string name="last_name">Last name</string>
    <string name="email1">Email</string>
    <string name="yay_create_a_new_account_for_your_app">Yay! create a new account for your app</string>
    <string name="create_account">Create account</string>
    <string name="first_name">First Name</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>

</resources>