<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryBlue"
        app:titleTextColor="@color/primaryWhite"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="138dp"
        android:layout_height="62dp"
        android:text="@string/textview"
        android:textAlignment="textStart"
        android:textColor="@color/primaryWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="403dp"
        android:layout_height="298dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="201.5dp"
            android:layout_height="146dp"
            android:background="@color/white"
            android:contentDescription="@string/image_btn1"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/timetable" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="201.5dp"
            android:layout_height="146dp"
            android:background="@color/white"
            android:contentDescription="@string/image_btn2"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/notes" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="201.5dp"
            android:layout_height="146dp"
            android:background="@color/white"
            android:contentDescription="@string/image_btn3"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/unit" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="201.5dp"
            android:layout_height="146dp"
            android:background="@color/white"
            android:contentDescription="@string/image_btn4"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/whatsapp" />
    </androidx.gridlayout.widget.GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notificationsRecyclerView"
        android:layout_width="411dp"
        android:layout_height="246dp"
        android:layout_below="@id/navigationButtonsGridLayout"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="38dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_home_black_24dp" />

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_notifications_black_24dp" />

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_manage" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>